third_party/clingo/libclingo/clingo.h


typedef int32_t clingo_literal_t;
typedef uint32_t clingo_id_t;
typedef int32_t clingo_weight_t;
typedef struct clingo_weighted_literal {
    clingo_literal_t literal;
    clingo_weight_t weight;
} clingo_weighted_literal_t;
enum clingo_error_e {
    clingo_error_success = 0,   
    clingo_error_runtime = 1,   
    clingo_error_logic = 2,     
    clingo_error_bad_alloc = 3, 
    clingo_error_unknown = 4    
};
typedef struct clingo_symbolic_atoms clingo_symbolic_atoms_t;
typedef uint64_t clingo_symbolic_atom_iterator_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_symbolic_atoms_literal(clingo_symbolic_atoms_t const *atoms,
                                                             clingo_symbolic_atom_iterator_t iterator,
                                                             clingo_literal_t *literal);
typedef struct clingo_theory_atoms clingo_theory_atoms_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_element_condition_id(clingo_theory_atoms_t const *atoms,
                                                                        clingo_id_t element,
                                                                        clingo_literal_t *condition);
CLINGO_VISIBILITY_DEFAULT bool clingo_theory_atoms_atom_literal(clingo_theory_atoms_t const *atoms, clingo_id_t atom,
                                                                clingo_literal_t *literal);
typedef struct clingo_assignment clingo_assignment_t;
enum clingo_propagator_check_mode_e {
    clingo_propagator_check_mode_none = 0,     
    clingo_propagator_check_mode_total = 1,    
    clingo_propagator_check_mode_fixpoint = 2, 
    clingo_propagator_check_mode_both =
        3, 
};
typedef int clingo_propagator_check_mode_t;
enum clingo_weight_constraint_type_e {
    clingo_weight_constraint_type_implication_left = -1, 
    clingo_weight_constraint_type_implication_right = 1, 
    clingo_weight_constraint_type_equivalence = 0,       
};
typedef int clingo_weight_constraint_type_t;
typedef struct clingo_propagate_init clingo_propagate_init_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_solver_literal(clingo_propagate_init_t const *init,
                                                                    clingo_literal_t aspif_literal,
                                                                    clingo_literal_t *solver_literal);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_add_watch(clingo_propagate_init_t *init,
                                                               clingo_literal_t solver_literal);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_add_watch_to_thread(clingo_propagate_init_t *init,
                                                                         clingo_literal_t solver_literal,
                                                                         clingo_id_t thread_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_remove_watch(clingo_propagate_init_t *init,
                                                                  clingo_literal_t solver_literal);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_remove_watch_from_thread(clingo_propagate_init_t *init,
                                                                              clingo_literal_t solver_literal,
                                                                              uint32_t thread_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_freeze_literal(clingo_propagate_init_t *init,
                                                                    clingo_literal_t solver_literal);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_symbolic_atoms(clingo_propagate_init_t const *init,
                                                                    clingo_symbolic_atoms_t const **atoms);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_theory_atoms(clingo_propagate_init_t const *init,
                                                                  clingo_theory_atoms_t const **atoms);
CLINGO_VISIBILITY_DEFAULT int clingo_propagate_init_number_of_threads(clingo_propagate_init_t const *init);
CLINGO_VISIBILITY_DEFAULT void clingo_propagate_init_set_check_mode(clingo_propagate_init_t *init,
                                                                    clingo_propagator_check_mode_t mode);
CLINGO_VISIBILITY_DEFAULT clingo_propagator_check_mode_t
clingo_propagate_init_get_check_mode(clingo_propagate_init_t const *init);
CLINGO_VISIBILITY_DEFAULT clingo_assignment_t const *
clingo_propagate_init_assignment(clingo_propagate_init_t const *init);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_add_literal(clingo_propagate_init_t *init, bool freeze,
                                                                 clingo_literal_t *result);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_add_clause(clingo_propagate_init_t *init,
                                                                clingo_literal_t const *clause, size_t size,
                                                                bool *result);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_add_weight_constraint(
    clingo_propagate_init_t *init, clingo_literal_t literal, clingo_weighted_literal_t const *literals, size_t size,
    clingo_weight_t bound, clingo_weight_constraint_type_t type, bool compare_equal, bool *result);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_add_minimize(clingo_propagate_init_t *init,
                                                                  clingo_literal_t literal, clingo_weight_t weight,
                                                                  clingo_weight_t priority);
CLINGO_VISIBILITY_DEFAULT bool clingo_propagate_init_propagate(clingo_propagate_init_t *init, bool *result);
typedef struct clingo_propagate_control clingo_propagate_control_t;
CLINGO_VISIBILITY_DEFAULT clingo_id_t clingo_propagate_control_thread_id(clingo_propagate_control_t const *control);
typedef struct clingo_propagator {
    bool (*init)(clingo_propagate_init_t *init, void *data);
    bool (*propagate)(clingo_propagate_control_t *control, clingo_literal_t const *changes, size_t size, void *data);
    void (*undo)(clingo_propagate_control_t const *control, clingo_literal_t const *changes, size_t size, void *data);
    bool (*check)(clingo_propagate_control_t *control, void *data);
    bool (*decide)(clingo_id_t thread_id, clingo_assignment_t const *assignment, clingo_literal_t fallback, void *data,
                   clingo_literal_t *decision);
} clingo_propagator_t;
typedef struct clingo_options clingo_options_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_options_add(clingo_options_t *options, char const *group, char const *option,
                                                  char const *description, bool (*parse)(char const *value, void *data),
                                                  void *data, bool multi, char const *argument);