third_party/clingo-sys/clingo/libclingo/clingo/control.hh

using PropagateInit = clingo_propagate_init;
struct clingo_propagate_init {
    virtual Potassco::Lit_t addLiteral(bool freeze) = 0;
    virtual bool addClause(Potassco::LitSpan lits) = 0;
    virtual bool addWeightConstraint(Potassco::Lit_t lit, Potassco::WeightLitSpan lits, Potassco::Weight_t bound,
                                     int type, bool eq) = 0;
    virtual void addMinimize(Potassco::Lit_t literal, Potassco::Weight_t weight, Potassco::Weight_t priority) = 0;
    virtual bool propagate() = 0;
    virtual Gringo::Output::DomainData const &theory() const = 0;
    virtual Gringo::SymbolicAtoms const &getDomain() const = 0;
    virtual Gringo::Lit_t mapLit(Gringo::Lit_t lit) const = 0;
    virtual void addWatch(Gringo::Lit_t lit) = 0;
    virtual void addWatch(uint32_t solverId, Gringo::Lit_t lit) = 0;
    virtual void removeWatch(Gringo::Lit_t lit) = 0;
    virtual void removeWatch(uint32_t solverId, Gringo::Lit_t lit) = 0;
    virtual void freezeLiteral(Gringo::Lit_t lit) = 0;
    virtual void enableHistory(bool b) = 0;
    virtual Potassco::AbstractAssignment const &assignment() const = 0;
    virtual int threads() const = 0;
    virtual clingo_propagator_check_mode_t getCheckMode() const = 0;
    virtual clingo_propagator_undo_mode_t getUndoMode() const = 0;
    virtual void setCheckMode(clingo_propagator_check_mode_t checkMode) = 0;
    virtual void setUndoMode(clingo_propagator_undo_mode_t undoMode) = 0;
    virtual ~clingo_propagate_init() noexcept = default;
};